SigmaCodebackup3rdSep/objects/Work_T__c.object
<CustomObject>
    <fields>
        <fullName>Resource_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Type Binding</relationshipLabel>
        <relationshipName>Work_Type_Binding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Charges__c</fullName>
        <label>Service Charges</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Duration__c</fullName>
        <description>Time taken for this work type to complete</description>
        <inlineHelpText>Enter number in hours</inlineHelpText>
        <label>Service Duration(in hours)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skill_Level__c</fullName>
        <inlineHelpText>The skill level can be between 0 to 99.99</inlineHelpText>
        <label>Skill Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technician</label>
        <referenceTo>Service_Resource__c</referenceTo>
        <relationshipLabel>Work Type Binding</relationshipLabel>
        <relationshipName>Work_Type_Binding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Type</label>
        <referenceTo>Work_Type__c</referenceTo>
        <relationshipLabel>Work Type Binding</relationshipLabel>
        <relationshipName>Work_Type_Binding</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Type Binding</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Work_Type__c</columns>
        <columns>Skill_Level__c</columns>
        <columns>Service_Duration__c</columns>
        <columns>Resource_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WT-{0000}</displayFormat>
        <label>Work Type Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Type Binding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Technician_Skill_Duration_not_provided</fullName>
        <active>true</active>
        <description>Technician Skill Duration not provided</description>
        <errorConditionFormula>AND( !ISBLANK( Resource_Name__c )  , OR(ISBLANK( Service_Duration__c ) ,ISBLANK(  Skill_Level__c )) )</errorConditionFormula>
        <errorMessage>Please add the technician skill and duration taken.</errorMessage>
    </validationRules>
</CustomObject>